--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@
     padding: 0;
     margin: 0;
 
+
+    
+
 }
 
 
@@ -30,7 +33,13 @@
     background-color:  var(--blacks);
     overflow-x: hidden;
 
+    width: 600px;
+    margin: auto;
+    border: solid 1px grey;
 
+  }
+  .html{
+    background-color: white;
   }
 html{
 
@@ -81,17 +90,20 @@ nav{
     background-color: var(--whites);
 }
 
-footer{
+.foooter{
 
   bottom: -5px;
   position: fixed;
   z-index: 2;
-  margin: 0px;
+
+
 }
 
-footer img{
-  width: 100%;
-  margin: 0px;
+.foooter img{
+  width: 600px;
+
+margin-left: -40px;
+
   
 }
 
@@ -242,7 +254,7 @@ padding-bottom: 80px;
     top: -60px;
     z-index: -2;
     width: 120vw;
-    transform: translate(-10vw, 0);
+    transform: translate(-30vw, 0);
     height: 100px;
     border-radius: 0px 0px 100% 100%;
     background-color: var(--whites);
@@ -256,7 +268,7 @@ padding-bottom: 80px;
   position: relative;
   top: 40px;
   width: 120vw;
-  transform: translate(-10vw, 0);
+  transform: translate(-30vw, 0);
   height: 100px;
   border-radius: 0px 0px 100% 100%;
   background-color: var(--blacks);
@@ -270,7 +282,7 @@ padding-bottom: 80px;
   position: relative;
   top: -40px;
   width: 120vw;
-  transform: translate(-10vw, 0);
+  transform: translate(-30vw, 0);
   height: 100px;
   border-radius: 100% 100% 0px 0px;
   background-color: var(--blacks);
@@ -281,7 +293,7 @@ padding-bottom: 80px;
 .spacerBlackFooter{
   position: relative;
   width: 120vw;
-  transform: translate(-15vw, 0);
+  transform: translate(-30vw, 0);
   height: 100px;
   border-radius: 0px 0px 100% 100%;
   background-color: var(--blacks);
@@ -492,8 +504,8 @@ Menu Item */
  #menu
  {
    position: absolute;
-   width: 100vw;
-   margin: -47px 0 0 -100vw;
+   width: 600px;
+   margin: -47px 0 0 -600px;
    padding: 50px;
    padding-top: 125px;
    min-height: 100vh;
